fixed products wrapping

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -1,17 +1,17 @@
 .card {
   width: $card-width;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   padding: 32px 16px 16px;
 
   border: 1px solid $color-gray;
   border-radius: 5px;
 
   &__image {
+    display: block;
+
     width: 160px;
     height: 134px;
+    margin: 0 auto;
     margin-bottom: 40px;
 
     object-fit: cover;
