--- a/src/styles/blocks/products.scss
+++ b/src/styles/blocks/products.scss
@@ -1,10 +1,12 @@
 .products {
   padding: 50px 0;
 
-  display: flex;
-  flex-wrap: wrap;
-  width: $products-container-width;
-  margin: 0 auto;
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    width: $products-container-width;
+    margin: 0 auto;
+  }
 
   &__card {
     margin-right: $card-right-gap;
